--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     />
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-success">
-      <div class="container-fluid">
+      <div class="container-fluid">    <nav class="navbar fixed-top navbar-expand-lg bg-success">
+
         <button
           class="navbar-toggler"
           type="button"
@@ -39,9 +39,6 @@
             </li>
             <li class="nav-item">
               <a href="#videos" class="nav-link">Videos</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
             </li>
           </ul>
         </div>
@@ -91,7 +88,7 @@
     <section>
       <h2>Photos</h2>
     </section>
-    <section id="photos">
+    <section id="photos" class="d-none d-md-block"">
       <div class="container">
         <div
           class="panel active"
@@ -142,15 +139,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/zMy5H7s9mtc"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          
         </div>
       </div>
     </section>
